2007-01-23  Edward Hervey  <edward@fluendo.com>

	* pitivi/timeline/effects.py:
	cough, sven is stupid, cough

2007-01-23  Edward Hervey  <edward@fluendo.com>

	* pitivi/Makefile.am:
	* pitivi/effects.py:
	Move the magician back to the top-level.
	* pitivi/timeline/Makefile.am:
	* pitivi/timeline/composition.py:
	* pitivi/timeline/effects.py:
	* pitivi/timeline/objects.py:
	* pitivi/timeline/source.py:
	* pitivi/timeline/timeline.py:
	Split the timeline objects into smaller files for easier comprehension.
	* pitivi/bin.py:
	* pitivi/discoverer.py:
	* pitivi/pitivi.py:
	* pitivi/playground.py:
	* pitivi/project.py:
	* pitivi/ui/complexsource.py:
	* pitivi/ui/gstwidget.py:
	* pitivi/ui/ruler.py:
	* pitivi/ui/sourcefactories.py:
	* pitivi/ui/timelineobjects.py:
	* pitivi/ui/tracklayer.py:
	* pitivi/ui/viewer.py:
	Fix inconsistencies detected by pychecker.
	Adapt code to timeline objects split-up.

2007-01-22  Edward Hervey  <edward@fluendo.com>

	* po/ar.po:
	* po/ca.po:
	* po/dz.po:
	* po/el.po:
	* po/en_GB.po:
	* po/es.po:
	* po/fi.po:
	* po/fr.po:
	* po/pa.po:
	* po/pt_BR.po:
	* po/sv.po:
	* po/zh_CN.po:
	Update po files for newly added translatable file.

2007-01-22  Edward Hervey  <edward@fluendo.com>

	* po/POTFILES.in:
	Add pitivi/ui/filelisterrordialog.py to translatable files.

2007-01-19  Edward Hervey  <edward@fluendo.com>

	* pitivi/discoverer.py:
	Use decodebin2 if the env variable is set. Because we want to use
	decodebin2... DO IT !  NOW !

2007-01-15  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	* pitivi/Makefile.am:
	* pitivi/effects.py:
	* pitivi/timeline.py:
	* pitivi/timeline:
	* pitivi/timeline/Makefile.am:
	* pitivi/timeline/__init__.py:
	* pitivi/timeline/effects.py:
	* pitivi/timeline/timeline.py:
	Create pitivi/timeline/ directory and move timeline.py and effects.py
	into there.
	* pitivi/pitivi.py:
	* pitivi/project.py:
	* pitivi/ui/complexlayer.py:
	* pitivi/ui/complexsource.py:
	* pitivi/ui/infolayer.py: