@@ -30,65 +30,44 @@ MEDIA_TYPE_NONE = 0
 MEDIA_TYPE_AUDIO = 1
 MEDIA_TYPE_VIDEO = 2
 
-class TimelineObject(gobject.GObject):
+## * Object Hierarchy
+
+##   Object
+##    |
+##    +---- Source
+##    |	   |
+##    |	   +---- FileSource
+##    |	   |
+##    |	   +---- LiveSource
+##    |	   |
+##    |	   +---- Composition
+##    |
+##    +---- Effect
+## 	   |
+## 	   +---- Simple Effect (1->1)
+## 	   |
+## 	   +---- Transition
+## 	   |
+## 	   +---- Complex Effect (N->1)
+
+class BrotherObjects(gobject.GObject):
     """
-    Base class for all timeline objects
-
-    * Properties
-      _ Start/Duration Time
-      _ Media Type
-      _ Gnonlin Object
-      _ Linked Object
-	_ Can be None
-	_ Must have same duration
-      _ Brother object
-        _ This is the same object but with the other media_type
-
-    * signals
-      _ 'start-duration-changed' : start position, duration position
-      _ 'linked-changed' : new linked object
+    Base class for objects that can have a brother and be linked to something else
     """
 
     __gsignals__ = {
-        "start-duration-changed" : ( gobject.SIGNAL_RUN_LAST,
-                                 gobject.TYPE_NONE,
-                                 (gobject.TYPE_PYOBJECT, gobject.TYPE_PYOBJECT, )),
-        "linked-changed" : ( gobject.SIGNAL_RUN_LAST,
-                             gobject.TYPE_NONE,
-                             (gobject.TYPE_PYOBJECT, ))
+        "linked-changed" : (gobject.SIGNAL_RUN_LAST,
+                            gobject.TYPE_NONE,
+                            (gobject.TYPE_PYOBJECT, ))
         }
-    
-##     start = -1  # start time
-##     duration = -1   # duration time
+
 ##     linked = None       # linked object
 ##     brother = None      # brother object, the other-media equivalent of this object
-##     factory = None      # the Factory with more details about this object
-##     gnlobject = None    # The corresponding GnlObject
-##     media_type = MEDIA_TYPE_NONE        # The Media Type of this object
 
-    def __init__(self, factory=None, start=-1, duration=-1,
-                 media_type=MEDIA_TYPE_NONE, name=""):
+    def __init__(self):
         gobject.GObject.__init__(self)
-        gst.log("new TimelineObject :%s" % name)
-        self.start = -1
-        self.duration = -1
         self.linked = None
         self.brother = None
-        self.name = name
-        # Set factory and media_type and then create the gnlobject
-        self.factory = factory
-        self.media_type = media_type
-        self.gnlobject = self._makeGnlObject()
-        self.gnlobject.connect("notify::start", self._startDurationChangedCb)
-        self.gnlobject.connect("notify::duration", self._startDurationChangedCb)
-        self._setStartDurationTime(start, duration)
-
-    def __repr__(self):
-        return '<%s %s>' % (type(self).__name__, self.name)
-
-    def _makeGnlObject(self):
-        """ create and return the gnl_object """
-        raise NotImplementedError
 
     def _unlinkObject(self):
         # really unlink the objects
@@ -143,6 +122,19 @@ class TimelineObject(gobject.GObject):
             self.relinkBrother()
         return self.brother
 
+    def setBrother(self, brother, autolink=True):
+        """
+        Force a brother on an object.
+        This can be useful if it's the parent of the object that knows
+        what his brother is.
+        Use with caution
+        """
+        self.brother = brother
+        # set ourselves as our brother's brother
+        self.brother.brother = self
+        if autolink:
+            self.relinkBrother()
+
     def _makeBrother(self):
         """
         Make the exact same object for the other media_type
@@ -150,6 +142,59 @@ class TimelineObject(gobject.GObject):
         """
         raise NotImplementedError
     
+class TimelineObject(BrotherObjects):
+    """
+    Base class for all timeline objects
+
+    * Properties
+      _ Start/Duration Time
+      _ Media Type
+      _ Gnonlin Object
+      _ Linked Object
+	_ Can be None
+	_ Must have same duration
+      _ Brother object
+        _ This is the same object but with the other media_type
+
+    * signals
+      _ 'start-duration-changed' : start position, duration position
+      _ 'linked-changed' : new linked object
+    """
+
+    __gsignals__ = {
+        "start-duration-changed" : ( gobject.SIGNAL_RUN_LAST,
+                                 gobject.TYPE_NONE,
+                                 (gobject.TYPE_PYOBJECT, gobject.TYPE_PYOBJECT, ))
+        }
+    
+##     start = -1  # start time
+##     duration = -1   # duration time
+##     factory = None      # the Factory with more details about this object
+##     gnlobject = None    # The corresponding GnlObject
+##     media_type = MEDIA_TYPE_NONE        # The Media Type of this object
+
+    def __init__(self, factory=None, start=-1, duration=-1,
+                 media_type=MEDIA_TYPE_NONE, name=""):
+        BrotherObjects.__init__(self)
+        gst.log("new TimelineObject :%s" % name)
+        self.start = -1
+        self.duration = -1
+        self.name = name
+        # Set factory and media_type and then create the gnlobject
+        self.factory = factory
+        self.media_type = media_type
+        self.gnlobject = self._makeGnlObject()
+        self.gnlobject.connect("notify::start", self._startDurationChangedCb)
+        self.gnlobject.connect("notify::duration", self._startDurationChangedCb)
+        self._setStartDurationTime(start, duration)
+
+    def __repr__(self):
+        return '<%s %s>' % (type(self).__name__, self.name)
+
+    def _makeGnlObject(self):
+        """ create and return the gnl_object """
+        raise NotImplementedError
+
     def _setStartDurationTime(self, start=-1, duration=-1):
         # really modify the start/duration time
         self.gnlobject.info("start:%s , duration:%s" %( gst.TIME_ARGS(start),
